crates/viewer_support/re_dataframe_ui/tests/integration/snapshots/integration__filter_tests__string_contains@ends_with_c.snap
---
source: crates/viewer_support/re_dataframe_ui/tests/integration/filter_tests.rs
expression: test_results
---
TestResult {
    filter: String(
        StringFilter {
            operator: EndsWith,
            query: "c",
        },
    ),
    field: Field {
        name: "column",
        data_type: Utf8,
    },
    unfiltered: StringArray
    [
      "a",
      "b",
      "c",
      "ab",
      "A B",
      "aBc",
    ],
    filtered: StringArray
    [
      "c",
      "aBc",
    ],
}
